update to 137, add a new planet

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -48,6 +48,7 @@ unit.degradation-solve.description = 向附近的敌人发射带电离子榴弹
 
 status.degradation-sanded.name = 沙子磨损
 status.degradation-electric-resonated.name = 电能振离
+status.corroded.name = 腐蚀
 
 planet.degradation-omurlo.name = 奥姆容
 
