add Sprites, update bundle

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,6 +1,8 @@
-mod.degradation.displayName = 衰变
+mod.degradation.name = 衰变
 mod.degradation.description = 一个正在开发的mindustry 138 JAVA mod,不要自行打包ヽ(`Д´)ﾉ
 
+item.degradation-silver.name = 铁
+item.degradation-silver.description = 用于基础建筑制造。
 item.degradation-silver.name = 银
 item.degradation-silver.description = 用于电力传输和建筑电路。
 item.degradation-heavite.name = 重质合金
@@ -31,6 +33,13 @@ block.degradation-miner.name = 布道
 block.degradation-miner.description = 向敌人的必经之路上发射地雷。
 block.degradation-fracture.name = 破裂
 block.degradation-fracture.description = 发射大型等离子子弹。
+block.degradation-sparkover.name = 击穿
+block.degradation-sparkover.description = 电击范围里的敌人
+
+block.degradation-iridium-wall.name = 铱墙
+block.degradation-iridium-wall.description = 保护己方建筑，挡下敌方炮弹。受攻击时间断释放碎片
+block.degradation-iridium-wall-large.name = 大型铱墙
+block.degradation-iridium-wall-large.description = 保护己方建筑，挡下敌方炮弹。受攻击时间断释放碎片
 
 block.degradation-ore-iridium.name = 铱
 block.degradation-ore-silver.name = 银
@@ -60,6 +69,9 @@ sector.degradation-launching-area.name = 着陆区
 sector.degradation-launching-area.description = 这是第三个区块的开始,在这里开采一些铁。
 sector.degradation-planetary-monitoring-center.name = 行星监测中心
 sector.degradation-planetary-monitoring-center.description = 敌人在这里监测所有轨道星体上的一举一动,摧毁服务器和敌人核心。
+
+stat.shardchance = 激发碎片概率
+stat.sharddamage = 激发碎片伤害
 
 "ヽ(`Д)?"
 "你怎么在这"
