Temperature System Part 4 ,update to 139,cleanup

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,8 +1,8 @@
 mod.degradation.name = 衰变
 mod.degradation.description = 一个正在开发的mindustry 138 JAVA mod,不要自行打包ヽ(`Д´)ﾉ
 
-item.degradation-silver.name = 铁
-item.degradation-silver.description = 用于基础建筑制造。
+item.degradation-iron.name = 铁
+item.degradation-iron.description = 用于基础建筑制造。
 item.degradation-silver.name = 银
 item.degradation-silver.description = 用于电力传输和建筑电路。
 item.degradation-heavite.name = 重质合金
