add file via upload

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,5 +1,5 @@
 mod.degradation.name = 衰变
-mod.degradation.description = 一个正在开发的mindustry 138 JAVA mod,不要自行打包ヽ(`Д´)ﾉ
+mod.degradation.description = 一个正在开发的mindustry 139 JAVA mod
 
 item.degradation-iron.name = 铁
 item.degradation-iron.description = 用于基础建筑制造。
@@ -16,8 +16,22 @@ block.degradation-concussion-alloy-smelter.name = 电磁合金冶炼炉。
 block.degradation-concussion-alloy-smelter.description = 用银和硅冶炼成电磁合金。
 block.degradation-heavite-compressor.name = 重质合金压缩器
 block.degradation-heavite-compressor.description = 用铁和石墨压缩成重质合金。
+block.degradation-boiler.name = 蒸汽锅炉
+block.degradation-boiler.description = 将水沸腾成蒸汽。 需要热量。
+
+block.degradation-temperature-conduit.name = 热量导管
+block.degradation-temperature-conduit.description = 传输热量。 与发热器和其他热量导管联合使用。
+
+block.degradation-temperature-source.name = 热量源
+block.degradation-temperature-source.description = 无限输出热量，仅限沙盒。
+block.degradation-temperature-void.name = 热量黑洞
+block.degradation-temperature-void.description = 销毁输入的所有热量，仅限沙盒。
+
 block.degradation-stirling-generator.name = 斯特林发电机
 block.degradation-stirling-generator.description = 用乙烯泉发电。
+block.degradation-burning-heater.name = 燃烧发热机
+block.degradation-burning-heater.description = 燃烧煤炭之类的可燃材料发热。
+
 block.degradation-ethylene-vent.name = 乙烯泉
 block.degradation-quarry.name = 采石场
 block.degradation-quarry.description = 挖掘前面一片区域的矿。
