--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,88 +1,88 @@
-mod.degradation.name = 衰变
-mod.degradation.description = 一个正在开发的mindustry 139 JAVA mod
+mod.disintegration.name = 衰变
+mod.disintegration.description = 一个正在开发的mindustry 139 JAVA mod
 
-item.degradation-iron.name = 铁
-item.degradation-iron.description = 用于基础建筑制造。
-item.degradation-silver.name = 银
-item.degradation-silver.description = 用于电力传输和建筑电路。
-item.degradation-heavite.name = 重质合金
-item.degradation-heavite.description = 用于建筑和单位的重型防御。
-item.degradation-concussion-alloy.name = 电磁合金
-item.degradation-concussion-alloy.description = 用于炮塔控制和电路。
-item.degradation-iridium.name = 铱
-item.degradation-iridium.description = 用于建筑的高质量防御。
+item.disintegration-iron.name = 铁
+item.disintegration-iron.description = 用于基础建筑制造。
+item.disintegration-silver.name = 银
+item.disintegration-silver.description = 用于电力传输和建筑电路。
+item.disintegration-heavite.name = 重质合金
+item.disintegration-heavite.description = 用于建筑和单位的重型防御。
+item.disintegration-concussion-alloy.name = 电磁合金
+item.disintegration-concussion-alloy.description = 用于炮塔控制和电路。
+item.disintegration-iridium.name = 铱
+item.disintegration-iridium.description = 用于建筑的高质量防御。
 
-block.degradation-concussion-alloy-smelter.name = 电磁合金冶炼炉。
-block.degradation-concussion-alloy-smelter.description = 用银和硅冶炼成电磁合金。
-block.degradation-heavite-compressor.name = 重质合金压缩器
-block.degradation-heavite-compressor.description = 用铁和石墨压缩成重质合金。
-block.degradation-boiler.name = 蒸汽锅炉
-block.degradation-boiler.description = 将水沸腾成蒸汽。 需要热量。
+block.disintegration-concussion-alloy-smelter.name = 电磁合金冶炼炉。
+block.disintegration-concussion-alloy-smelter.description = 用银和硅冶炼成电磁合金。
+block.disintegration-heavite-compressor.name = 重质合金压缩器
+block.disintegration-heavite-compressor.description = 用铁和石墨压缩成重质合金。
+block.disintegration-boiler.name = 蒸汽锅炉
+block.disintegration-boiler.description = 将水沸腾成蒸汽。 需要热量。
 
-block.degradation-temperature-conduit.name = 热量导管
-block.degradation-temperature-conduit.description = 传输热量。 与发热器和其他热量导管联合使用。
+block.disintegration-temperature-conduit.name = 热量导管
+block.disintegration-temperature-conduit.description = 传输热量。 与发热器和其他热量导管联合使用。
 
-block.degradation-temperature-source.name = 热量源
-block.degradation-temperature-source.description = 无限输出热量，仅限沙盒。
-block.degradation-temperature-void.name = 热量黑洞
-block.degradation-temperature-void.description = 销毁输入的所有热量，仅限沙盒。
+block.disintegration-temperature-source.name = 热量源
+block.disintegration-temperature-source.description = 无限输出热量，仅限沙盒。
+block.disintegration-temperature-void.name = 热量黑洞
+block.disintegration-temperature-void.description = 销毁输入的所有热量，仅限沙盒。
 
-block.degradation-stirling-generator.name = 斯特林发电机
-block.degradation-stirling-generator.description = 用乙烯泉发电。
-block.degradation-burning-heater.name = 燃烧发热机
-block.degradation-burning-heater.description = 燃烧煤炭之类的可燃材料发热。
+block.disintegration-stirling-generator.name = 斯特林发电机
+block.disintegration-stirling-generator.description = 用乙烯泉发电。
+block.disintegration-burning-heater.name = 燃烧发热机
+block.disintegration-burning-heater.description = 燃烧煤炭之类的可燃材料发热。
 
-block.degradation-ethylene-vent.name = 乙烯泉
-block.degradation-quarry.name = 采石场
-block.degradation-quarry.description = 挖掘前面一片区域的矿。
-block.degradation-axe.name = 战斧
-block.degradation-axe.description = 向敌人发射四联制导导弹。
-block.degradation-spherical-lightning.name = 球状闪电
-block.degradation-spherical-lightning.description = 向敌人发射电弧球。
-block.degradation-holy.name = 圣光
-block.degradation-holy.description = 发射激光弹来伤害敌人并修复友方建筑。 
-block.degradation-finspray.name = 扬尘
-block.degradation-finspray.description = 向敌人发射物质粉尘。
-block.degradation-miner.name = 布道
-block.degradation-miner.description = 向敌人的必经之路上发射地雷。
-block.degradation-fracture.name = 破裂
-block.degradation-fracture.description = 发射大型等离子子弹。
-block.degradation-sparkover.name = 击穿
-block.degradation-sparkover.description = 电击范围里的敌人
+block.disintegration-ethylene-vent.name = 乙烯泉
+block.disintegration-quarry.name = 采石场
+block.disintegration-quarry.description = 挖掘前面一片区域的矿。
+block.disintegration-axe.name = 战斧
+block.disintegration-axe.description = 向敌人发射四联制导导弹。
+block.disintegration-spherical-lightning.name = 球状闪电
+block.disintegration-spherical-lightning.description = 向敌人发射电弧球。
+block.disintegration-holy.name = 圣光
+block.disintegration-holy.description = 发射激光弹来伤害敌人并修复友方建筑。 
+block.disintegration-finspray.name = 扬尘
+block.disintegration-finspray.description = 向敌人发射物质粉尘。
+block.disintegration-miner.name = 布道
+block.disintegration-miner.description = 向敌人的必经之路上发射地雷。
+block.disintegration-fracture.name = 破裂
+block.disintegration-fracture.description = 发射大型等离子子弹。
+block.disintegration-sparkover.name = 击穿
+block.disintegration-sparkover.description = 电击范围里的敌人
 
-block.degradation-iridium-wall.name = 铱墙
-block.degradation-iridium-wall.description = 保护己方建筑，挡下敌方炮弹。受攻击时间断释放碎片
-block.degradation-iridium-wall-large.name = 大型铱墙
-block.degradation-iridium-wall-large.description = 保护己方建筑，挡下敌方炮弹。受攻击时间断释放碎片
+block.disintegration-iridium-wall.name = 铱墙
+block.disintegration-iridium-wall.description = 保护己方建筑，挡下敌方炮弹。受攻击时间断释放碎片
+block.disintegration-iridium-wall-large.name = 大型铱墙
+block.disintegration-iridium-wall-large.description = 保护己方建筑，挡下敌方炮弹。受攻击时间断释放碎片
 
-block.degradation-ore-iridium.name = 铱
-block.degradation-ore-silver.name = 银
+block.disintegration-ore-iridium.name = 铱
+block.disintegration-ore-silver.name = 银
 
-unit.degradation-lancet.name = 柳刀
-unit.degradation-lancet.description = 向附近的敌人发射离子场球。
-unit.degradation-raven.name = 渡鸦
-unit.degradation-raven.description = 向附近的敌人发射质子鱼雷。
+unit.disintegration-lancet.name = 柳刀
+unit.disintegration-lancet.description = 向附近的敌人发射离子场球。
+unit.disintegration-raven.name = 渡鸦
+unit.disintegration-raven.description = 向附近的敌人发射质子鱼雷。
 
-unit.degradation-knife.name = 利刃
-unit.degradation-knife.description = 向附近的敌人发动穿刺攻击。
+unit.disintegration-knife.name = 利刃
+unit.disintegration-knife.description = 向附近的敌人发动穿刺攻击。
 
-unit.degradation-essence.name = 真理
-unit.degradation-essence.description = 向附近的敌人发射离子球。
-unit.degradation-truth.name = 实性
-unit.degradation-truth.description = 向附近的敌人发射例子光束。
-unit.degradation-solve.name = 破解
-unit.degradation-solve.description = 向附近的敌人发射带电离子榴弹。
+unit.disintegration-essence.name = 真理
+unit.disintegration-essence.description = 向附近的敌人发射离子球。
+unit.disintegration-truth.name = 实性
+unit.disintegration-truth.description = 向附近的敌人发射例子光束。
+unit.disintegration-solve.name = 破解
+unit.disintegration-solve.description = 向附近的敌人发射带电离子榴弹。
 
-status.degradation-sanded.name = 沙子磨损
-status.degradation-electric-resonated.name = 电能振离
+status.disintegration-sanded.name = 沙子磨损
+status.disintegration-electric-resonated.name = 电能振离
 status.corroded.name = 腐蚀
 
-planet.degradation-omurlo.name = 奥姆容
+planet.disintegration-omurlo.name = 奥姆容
 
-sector.degradation-launching-area.name = 着陆区
-sector.degradation-launching-area.description = 这是第三个区块的开始,在这里开采一些铁。
-sector.degradation-planetary-monitoring-center.name = 行星监测中心
-sector.degradation-planetary-monitoring-center.description = 敌人在这里监测所有轨道星体上的一举一动,摧毁服务器和敌人核心。
+sector.disintegration-launching-area.name = 着陆区
+sector.disintegration-launching-area.description = 这是第三个区块的开始,在这里开采一些铁。
+sector.disintegration-planetary-monitoring-center.name = 行星监测中心
+sector.disintegration-planetary-monitoring-center.description = 敌人在这里监测所有轨道星体上的一举一动,摧毁服务器和敌人核心。
 
 stat.shardchance = 激发碎片概率
 stat.sharddamage = 激发碎片伤害
