Laser System part 2

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -36,7 +36,13 @@ block.disintegration-burning-heater.description = 燃烧煤炭之类的可燃材
 block.disintegration-laser-device.name = 电力激光器
 block.disintegration-laser-device.description = 用电力生成激光。
 block.disintegration-laser-reflector.name = 激光反射器
-block.disintegration-laser-reflector.description = 将激光改变方向或延长长度。
+block.disintegration-laser-reflector.description = 将激光改变方向并延长长度。
+block.disintegration-laser-source.name = 激光源
+block.disintegration-laser-source.description = 无限输出激光，仅限沙盒。
+block.disintegration-laser-router.name = 激光路由器
+block.disintegration-laser-router.description = 将激光分成三个方向并延长长度。
+block.disintegration-excitation-reactor.name = 激发反应堆
+block.disintegration-excitation-reactor.description = 将激光分成三个方向并延长长度。
 
 block.disintegration-ethylene-vent.name = 乙烯泉
 
@@ -99,6 +105,7 @@ stat.sharddamage = 激发碎片伤害
 
 bar.laser = 激光
 bar.laseramount = 激光：{0}
+bar.laserpercent = 激光：{0} ({1}%)
 
 "ヽ(`Д)?"
 "你怎么在这"
