我，不 想 更 新！！！↗↗↗↗↗

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -13,8 +13,6 @@ item.disintegration-ionic-alloy.name = 离子合金
 item.disintegration-ionic-alloy.description = 用于电力炮塔和子弹。
 item.disintegration-iridium.name = 铱
 item.disintegration-iridium.description = 用于建筑的高质量防御。
-item.disintegration-stone.name = 岩石
-item.disintegration-stone.description = 最基础的资源，用于磨成沙子。
 
 liquid.disintegration-steam.name = 蒸汽
 liquid.disintegration-steam.description = 由水蒸发而来。
@@ -33,14 +31,15 @@ block.disintegration-rock-extractor.name = 岩石提取器
 block.disintegration-rock-extractor.description = 从地下提取岩石。
 block.disintegration-electrolyser.name = 电解器
 block.disintegration-electrolyser.description = 将水电解为氢和臭氧气体。
+block.disintegration-silicon-refiner.name = 硅精炼器
+block.disintegration-silicon-refiner.description = 将沙和煤炭精炼为硅
+block.disintegration-graphite-compressor.name = 石墨压缩机
+block.disintegration-graphite-compressor.description = 用高压将煤炭压缩为石墨
 
-block.disintegration-temperature-conduit.name = 热量导管
-block.disintegration-temperature-conduit.description = 传输热量。 与发热器和其他热量导管联合使用。
-
-block.disintegration-temperature-source.name = 热量源
-block.disintegration-temperature-source.description = 无限输出热量，仅限沙盒。
-block.disintegration-temperature-void.name = 热量黑洞
-block.disintegration-temperature-void.description = 销毁输入的所有热量，仅限沙盒。
+block.disintegration-heat-conduit.name = 热量导管
+block.disintegration-heat-conduit.description = 传输热量。 与发热器和其他热量导管联合使用。
+block.disintegration-heat-conduit-router.name = 热量导管路由器
+block.disintegration-heat-conduit-router.description = 将热量平均分配到另外三个面。
 
 block.disintegration-stirling-generator.name = 斯特林发电机
 block.disintegration-stirling-generator.description = 当放置在乙烯泉上时产生电力。 同时产生少量水。
@@ -53,7 +52,9 @@ block.disintegration-burning-heater.name = 燃烧发热机
 block.disintegration-burning-heater.description = 燃烧煤炭之类的可燃材料发热。
 
 block.disintegration-pressure-drill.name = 气压钻头
-block.disintegration-pressure-drill.description = 放置在矿物上时，以缓慢的速度无限输出物品。 只能开采基本资源。
+block.disintegration-pressure-drill.description = 放置在矿物上时，以缓慢的速度无限输出物品。\n只能开采基本资源。
+block.disintegration-portable-drill.name = 便携式钻头
+block.disintegration-portable-drill.description = 放置在矿物上时，以缓慢的速度无限输出物品。可以移动。\n只能开采基本资源。
 
 block.disintegration-laser-device.name = 电力激光器
 block.disintegration-laser-device.description = 用电力生成激光。
@@ -75,7 +76,7 @@ block.disintegration-light-space.name = 空间站太空
 block.disintegration-space-station-floor.name = 空间站地板
 
 block.disintegration-quarry.name = 采石场
-block.disintegration-quarry.description = 挖掘前面一片区域的矿。
+block.disintegration-quarry.description = 挖掘前面一片区域的矿物。
 
 block.disintegration-axe.name = 战斧
 block.disintegration-axe.description = 向敌人发射四联制导导弹。
@@ -89,6 +90,8 @@ block.disintegration-ambush.name = 伏击
 block.disintegration-ambush.description = 向敌人的必经之路上发射地雷。
 block.disintegration-fracture.name = 破裂
 block.disintegration-fracture.description = 发射大型等离子子弹。
+block.disintegration-dissolve.name = 溶解
+block.disintegration-dissolve.description = 向附近的敌人发射持续的等离子束。
 block.disintegration-sparkover.name = 击穿
 block.disintegration-sparkover.description = 电击范围里的敌人。
 block.disintegration-blade.name = 剑刃
@@ -111,15 +114,15 @@ block.disintegration-space-station-core.name = 空间站核心
 block.disintegration-space-station-core.description = 空间站的核心。 一旦被摧毁，此区块就会丢失。
 
 block.disintegration-space-station-builder-1.name = 空间站建造器1
-block.disintegration-space-station-builder-1.description = 在前方建造1x1大小的空间站。
+block.disintegration-space-station-builder-1.description = 在前方扩展1x1大小的空间站。
 block.disintegration-space-station-builder-3.name = 空间站建造器3
-block.disintegration-space-station-builder-3.description = 在前方建造3x3大小的空间站。
+block.disintegration-space-station-builder-3.description = 在前方扩展3x3大小的空间站。
 block.disintegration-space-station-builder-5.name = 空间站建造器5
-block.disintegration-space-station-builder-5.description = 在前方建造5x5大小的空间站。
+block.disintegration-space-station-builder-5.description = 在前方扩展5x5大小的空间站。
 block.disintegration-space-station-builder-7.name = 空间站建造器7
-block.disintegration-space-station-builder-7.description = 在前方建造7x7大小的空间站。
+block.disintegration-space-station-builder-7.description = 在前方扩展7x7大小的空间站。
 block.disintegration-space-station-builder-9.name = 空间站建造器9
-block.disintegration-space-station-builder-9.description = 在前方建造9x9大小的空间站。
+block.disintegration-space-station-builder-9.description = 在前方扩展9x9大小的空间站。
 
 block.disintegration-space-station-breaker-1.name = 空间站破坏器1
 block.disintegration-space-station-breaker-1.description = 破坏1x1大小的空间站。
@@ -134,6 +137,8 @@ block.disintegration-space-station-breaker-9.description = 破坏9x9大小的空
 
 block.disintegration-blast-mine.name = 爆能地雷
 block.disintegration-blast-mine.description = 对踩到它的人爆炸进行攻击。
+block.disintegration-repair-drone-station.name = 修复无人机站
+block.disintegration-repair-drone-station.description = 建造修复无人机。\n 无人机会自动修复范围内的建筑。
 
 block.disintegration-ore-iridium.name = 铱
 block.disintegration-ore-silver.name = 银
@@ -176,9 +181,4 @@ bar.laser = 激光
 bar.laseramount = 激光：{0}
 bar.laserpercent = 激光：{0} ({1}%)
 
-unit.temperatureunits = 温度单位
-unit.temperatureunitspersecond = 温度单位/秒
 unit.laserunits = 激光单位
-
-a = "ヽ(`Д)?"
-b = "你怎么在这"
