--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -36,6 +36,23 @@ block.disintegration-silicon-refiner.description = 将沙和煤炭精炼为硅
 block.disintegration-graphite-compressor.name = 石墨压缩机
 block.disintegration-graphite-compressor.description = 用高压将煤炭压缩为石墨
 
+block.disintegration-iron-conveyor.name = 铁传送带
+block.disintegration-iron-conveyor.description = 向前运输物品。
+block.disintegration-iron-bridge-conveyor.name = 铁传送带桥
+block.disintegration-iron-bridge-conveyor.description = 跨越任意地形或建筑运输物品。
+block.disintegration-alternate-overflow-gate.name = 变换溢流门
+block.disintegration-alternate-sorter.description = 当前方被堵塞时才会向两侧运输。 \n点击来切换模式
+block.disintegration-iron-sorter.name = 铁分类器
+block.disintegration-iron-sorter.description = 如果所选物品与所选种类相同，则允许其通过。否则，物品将向两侧输出。
+block.disintegration-inverted-iron-sorter.name = 反向铁分类器
+block.disintegration-inverted-iron-sorter.description = 像分类器一样处理物品，不过是向两侧输出所选的物品。
+block.disintegration-fast-junction.name = 快速交叉器
+block.disintegration-fast-junction.description = 两条交叉传送带的桥梁。
+block.disintegration-fast-router.name = 快速路由器
+block.disintegration-fast-router.description = 将物品平均分配到其他三个方向。
+block.disintegration-iridium-conveyor.name = 铱传送带
+block.disintegration-iridium-conveyor.description = 向前运输物品，比铁传送带快。
+
 block.disintegration-heat-conduit.name = 热量导管
 block.disintegration-heat-conduit.description = 传输热量。 与发热器和其他热量导管联合使用。
 block.disintegration-heat-conduit-router.name = 热量导管路由器
@@ -107,6 +124,22 @@ block.disintegration-iridium-wall.name = 铱墙
 block.disintegration-iridium-wall.description = 保护己方建筑，挡下敌方炮弹。受攻击时间断释放碎片。
 block.disintegration-iridium-wall-large.name = 大型铱墙
 block.disintegration-iridium-wall-large.description = 保护己方建筑，挡下敌方炮弹。受攻击时间断释放碎片。
+
+block.disintegration-payload-constructor.name = 载荷构造器
+block.disintegration-payload-constructor.description = 制造尺寸不超过2x2方块的建筑。
+block.disintegration-large-payload-constructor.name = 大型载荷构造器
+block.disintegration-large-payload-constructor.description = 制造尺寸不超过4x4方块的建筑。
+block.disintegration-payload-loader.name = 载荷装载器
+block.disintegration-payload-loader.description = 将液体和物品装载进方块中。
+block.disintegration-payload-unloader.name = 载荷卸载器
+block.disintegration-payload-unloader.description = 将液体和物品从方块中卸载。
+block.disintegration-payload-deconstructor.name = 载荷解构器
+block.disintegration-payload-deconstructor.description = 解构建筑与单位，并返还100%的制造成本。
+
+block.disintegration-assembler-construct-module.name = 装配厂建造模块
+block.disintegration-assembler-construct-module.description = 辅助组装厂装配单位。提高装配速度。
+block.disintegration-assembler-expand-interface-module.name = 装配厂扩展接口模块
+block.disintegration-assembler-expand-interface-module.description = 用作装配厂载荷输入。
 
 block.disintegration-core-pedestal.name = 基座核心
 block.disintegration-core-pedestal.description = 基地的核心。 一旦被摧毁，此区块就会丢失。
