钢铁是怎样炼成的

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,6 +1,9 @@
 mod.disintegration.name = 衰变
 mod.disintegration.description = 一个正在开发的mindustry V7 JAVA mod
 
+spacestation = 空间站
+spacestationwhitespace = false
+
 item.disintegration-iron.name = 铁
 item.disintegration-iron.description = 用于基础建筑制造。
 item.disintegration-silver.name = 银
