export  tech tree

--- a/main/assets/bundles/bundle_zh_CN.properties
+++ b/main/assets/bundles/bundle_zh_CN.properties
@@ -61,6 +61,8 @@ block.disintegration-surge-furnace.name = 合金熔炉
 block.disintegration-surge-furnace.description = 将银、铅和硅熔炼成巨浪合金。
 block.disintegration-centrifuge.name = 高速离心机
 block.disintegration-centrifuge.description = 将矿渣液分离成铁，银和铱成分。 服务器专用。
+block.disintegration-blast-compound-mixer.name = 爆炸混合物混合器
+block.disintegration-blast-compound-mixer.description = 利用煤炭和藻水生产爆炸混合物。
 
 block.disintegration-nitride-synthesizer.name = 氮化物合成机
 block.disintegration-nitridesynthesizer.description = 用氮和镓合成氮化物。 需要热量和氢气。
@@ -160,8 +162,12 @@ block.disintegration-axe.name = 战斧
 block.disintegration-axe.description = 向敌人发射四联制导导弹。
 block.disintegration-voltage.name = 电压
 block.disintegration-voltage.description = 向敌人发射电弧球。
-block.disintegration-holy.name = 圣光
-block.disintegration-holy.description = 发射激光弹来伤害敌人并修复友方建筑。
+block.disintegration-awake.name = 唤醒
+block.disintegration-awake.description = 发射激光弹来伤害敌人并修复友方建筑。
+block.disintegration-twist.name = 缠绕
+block.disintegration-twist.description = 向敌人发射螺旋状扭曲子弹。
+block.disintegration-regeneration.name = 复苏
+block.disintegration-regeneration.description = 发射大型爆炸能量炮弹。
 block.disintegration-finspray.name = 扬尘
 block.disintegration-finspray.description = 向敌人发射物质粉尘。
 block.disintegration-ambush.name = 伏击
@@ -180,6 +186,8 @@ block.disintegration-focus.name = 聚焦
 block.disintegration-focus.description = 向敌人发射单目标激光。
 block.disintegration-condense.name = 凝结
 block.disintegration-condense.description = 向敌人发射慢速单目标冷冻激光。
+block.disintegration-torch.name = 火炬
+block.disintegration-torch.description = 向敌人持续喷射火焰。 穿透敌方装甲。
 block.disintegration-blaze.name = 烈焰
 block.disintegration-blaze.description = 充能并向附近的敌人发射持续的激光束。 需要冷却液。
 block.disintegration-impact.name = 冲击
@@ -231,6 +239,8 @@ block.disintegration-payload-deconstructor.name = 载荷解构器
 block.disintegration-payload-deconstructor.description = 解构建筑与单位，并返还100%的制造成本。
 block.disintegration-magnetized-payload-rail.name = 磁悬浮载荷轨道
 block.disintegration-magnetized-payload-rail.description = 运送大型载荷，例如从工厂生产的单位。
+block.disintegration-magnetized-payload-rail-short.name = 短磁悬浮载荷轨道
+block.disintegration-magnetized-payload-rail-short.description = 运送大型载荷，例如从工厂生产的单位。
 block.disintegration-payload-accelerator.name = 载荷加速器
 block.disintegration-payload-accelerator.description = 运送大型载荷。 加速载荷。
 block.disintegration-payload-decelerator.name = 载荷减速器
@@ -282,9 +292,20 @@ block.disintegration-blast-mine.name = 爆能地雷
 block.disintegration-blast-mine.description = 对踩到它的人爆炸进行攻击。
 block.disintegration-repair-drone-station.name = 修复无人机站
 block.disintegration-repair-drone-station.description = 建造修复无人机。\n 无人机会自动修复范围内的建筑。
+block.disintegration-repairer.name = 修复器
+block.disintegration-repairer.description = 自动修复范围内的建筑。
 
 block.disintegration-space-station-launch-pad.name = 空间站发射台
 block.disintegration-space-station-launch-pad.description = 将空间站发射至指定星球。
+block.disintegration-orbital-launch-pad.name = 轨道发射台
+block.disintegration-orbital-launch-pad.description = 将货物发射至空间站。
+block.disintegration-orbital-launch-pad.details = 用于资源地面对空间站运输的轨道系统。
+block.disintegration-space-launch-pad.name = 太空发射台
+block.disintegration-space-launch-pad.description = 将货物发射至指定区块。
+block.disintegration-space-launch-pad.details = 用于资源空间站对地面运输的轨道系统。
+block.disintegration-interplanetary-launch-pad.name = 行星际发射台
+block.disintegration-interplanetary-launch-pad.description = 将货物发射至指定空间站。
+block.disintegration-interplanetary-launch-pad.details = 用于资源空间站对空间站运输的轨道系统。
 
 unit.disintegration-lancet.name = 柳刀
 unit.disintegration-lancet.description = 向附近的敌人发射激光弹。
