太阳能热水器

--- a/main/assets/bundles/bundle_zh_CN.properties
+++ b/main/assets/bundles/bundle_zh_CN.properties
@@ -1,7 +1,8 @@
 mod.disintegration.name=\u8870\u53D8
-mod.disintegration.description=\u4E00\u4E2A\u6B63\u5728\u5F00\u53D1\u7684mindustry V7 JAVA mod
+mod.disintegration.description=\u4E00\u4E2A\u6B63\u5728\u5F00\u53D1\u7684
 spacestation=\u7A7A\u95F4\u7AD9
-spacestationwhitespace=false
+whitespacebetween=false
+cell=\u6DB2\u4F53\u5355\u5143
 item.disintegration-iron.name=\u94C1
 item.disintegration-iron.description=\u7528\u4E8E\u57FA\u7840\u5EFA\u7B51\u5236\u9020\u3002
 item.disintegration-steel.name=\u94A2
@@ -29,6 +30,7 @@ liquid.disintegration-liquid-crystal.name=\u6DB2\u6676
 liquid.disintegration-liquid-crystal.description=\u7528\u4E8E\u5148\u8FDB\u751F\u4EA7\u4E0E\u53CD\u5E94\u5806\u51B7\u5374\u3002
 liquid.disintegration-oxygen.name=\u6C27\u6C14
 liquid.disintegration-oxygen.description=\u7528\u4F5C\u6750\u6599\u751F\u4EA7\u7684\u6C27\u5316\u5242\u548C\u71C3\u6599\u3002 \u6709\u4E00\u5B9A\u7206\u70B8\u6027\u3002
+liquid.disintegration-algal-water.name=\u85FB\u6CE5
 block.disintegration-magnetism-alloy-smelter.name=\u7535\u78C1\u5408\u91D1\u51B6\u70BC\u7089
 block.disintegration-magnetism-alloy-smelter.description=\u7528\u94F6\uFF0C\u7845\u548C\u6C2E\u6C14\u5408\u6210\u7535\u78C1\u5408\u91D1\u3002
 block.disintegration-conduction-alloy-smelter.name=\u4F20\u5BFC\u5408\u91D1\u51B6\u70BC\u7089
@@ -44,9 +46,13 @@ block.disintegration-air-compressor.description=\u4ECE\u5927\u6C14\u4E2D\u538B\u
 block.disintegration-electrolyser.name=\u7535\u89E3\u5668
 block.disintegration-electrolyser.description=\u5C06\u6C34\u7535\u89E3\u4E3A\u6C22\u548C\u6C27\u6C14\u4F53\u3002
 block.disintegration-silicon-refiner.name=\u7845\u7CBE\u70BC\u5668
-block.disintegration-silicon-refiner.description=\u5C06\u6C99\u548C\u7164\u70AD\u7CBE\u70BC\u4E3A\u7845
+block.disintegration-silicon-refiner.description=\u5C06\u6C99\u548C\u7164\u70AD\u7CBE\u70BC\u4E3A\u7845\u3002
 block.disintegration-graphite-compressor.name=\u77F3\u58A8\u538B\u7F29\u673A
-block.disintegration-graphite-compressor.description=\u7528\u9AD8\u538B\u5C06\u7164\u70AD\u538B\u7F29\u4E3A\u77F3\u58A8
+block.disintegration-graphite-compressor.description=\u7528\u9AD8\u538B\u5C06\u7164\u70AD\u538B\u7F29\u4E3A\u77F3\u58A8\u3002
+block.disintegration-space-station-panel-compressor.name=\u7A7A\u95F4\u7AD9\u5408\u91D1\u677F\u538B\u7F29\u673A
+block.disintegration-space-station-panel-compressor.description=\u5C06\u94DC\u4E0E\u949B\u538B\u7F29\u4E3A\u7A7A\u95F4\u7AD9\u5408\u91D1\u677F\u3002
+block.disintegration-space-station-panel-compressor-large.name=\u5927\u578B\u7A7A\u95F4\u7AD9\u5408\u91D1\u677F\u538B\u7F29\u673A\u3002
+block.disintegration-space-station-panel-compressor-large.description=\u5C06\u94DC\u4E0E\u949B\u70AD\u538B\u7F29\u4E3A\u7A7A\u95F4\u7AD9\u5408\u91D1\u677F\u3002
 block.disintegration-steel-smelter.name=\u94A2\u51B6\u70BC\u7089
 block.disintegration-steel-smelter.description=\u5C06\u94C1\u548C\u7164\u70AD\u70BC\u4E3A\u94A2\u3002
 block.disintegration-steel-blast-furnace.name=\u70BC\u94A2\u9AD8\u7089
@@ -54,11 +60,11 @@ block.disintegration-steel-blast-furnace.description=\u5C06\u94C1\u548C\u7164\u7
 block.disintegration-surge-furnace.name=\u5408\u91D1\u7194\u7089
 block.disintegration-surge-furnace.description=\u5C06\u94F6\u3001\u94C5\u548C\u7845\u7194\u70BC\u6210\u5DE8\u6D6A\u5408\u91D1\u3002
 block.disintegration-centrifuge.name=\u9AD8\u901F\u79BB\u5FC3\u673A
-block.disintegration-centrifuge.description=\u5C06\u77FF\u6E23\u6DB2\u5206\u79BB\u6210\u94C1\uFF0C\u94F6\u548C\u94F1\u6210\u5206\u3002 \u670D\u52A1\u5668\u4E13\u7528\u3002
+block.disintegration-centrifuge.description=\u5C06\u77FF\u6E23\u6DB2\u5206\u79BB\u6210\u94C1\uFF0C\u94F6\u548C\u94F1\u6210\u5206\u3002
 block.disintegration-blast-compound-mixer.name=\u7206\u70B8\u6DF7\u5408\u7269\u6DF7\u5408\u5668
 block.disintegration-blast-compound-mixer.description=\u5229\u7528\u7164\u70AD\u548C\u85FB\u6C34\u751F\u4EA7\u7206\u70B8\u6DF7\u5408\u7269\u3002
 block.disintegration-nitride-synthesizer.name=\u6C2E\u5316\u7269\u5408\u6210\u673A
-block.disintegration-nitridesynthesizer.description=\u7528\u6C2E\u548C\u9553\u5408\u6210\u6C2E\u5316\u7269\u3002 \u9700\u8981\u70ED\u91CF\u548C\u6C22\u6C14\u3002
+block.disintegration-nitride-synthesizer.description=\u7528\u6C2E\u548C\u9553\u5408\u6210\u6C2E\u5316\u7269\u3002 \u9700\u8981\u70ED\u91CF\u548C\u6C22\u6C14\u3002
 block.slag-centrifuge.description=\u4EE5\u4F4E\u6548\u7387\u5C06\u77FF\u6E23\u6DB2\u5206\u79BB\u6210\u9553\u6210\u5206\u3002
 block.disintegration-iron-conveyor.name=\u94C1\u4F20\u9001\u5E26
 block.disintegration-iron-conveyor.description=\u5411\u524D\u8FD0\u8F93\u7269\u54C1\u3002
@@ -92,6 +98,8 @@ block.disintegration-iron-power-node-large.name=\u5927\u578B\u94C1\u7535\u529B\u
 block.disintegration-iron-power-node-large.description=\u8FDE\u63A5\u8303\u56F4\u66F4\u5927\u7684\u9AD8\u7EA7\u7535\u529B\u8282\u70B9\u3002
 block.disintegration-power-capacitor.name=\u7535\u5BB9
 block.disintegration-power-capacitor.description=\u50A8\u5B58\u7535\u7F51\u591A\u4F59\u7535\u529B\uFF0C\u5E76\u5728\u7535\u7F51\u4F9B\u7535\u4E0D\u8DB3\u65F6\u653E\u7535\u3002
+block.disintegration-arc-reactor.name=\u7535\u5F27\u53CD\u5E94\u5806
+block.disintegration-arc-reactor.description=\u5229\u7528\u5DE8\u6D6A\u5408\u91D1\u7684\u653E\u7535\u6027\u4E0E\u7535\u78C1\u5408\u91D1\u7684\u78C1\u6027\u53D1\u7535\u3002
 block.disintegration-neoplasm-generator.name=\u80BF\u7624\u53D1\u7535\u673A
 block.disintegration-neoplasm-generator.description=\u7528\u7624\u6DB2\u6765\u53D1\u7535\u3002 \u4F1A\u611F\u67D3\u4E34\u8FD1\u7684\u65B9\u5757\u3002
 block.disintegration-space-solar-panel.name=\u592A\u9633\u80FD\u677F
@@ -149,6 +157,8 @@ block.disintegration-twist.name=\u7F20\u7ED5
 block.disintegration-twist.description=\u5411\u654C\u4EBA\u53D1\u5C04\u87BA\u65CB\u72B6\u626D\u66F2\u5B50\u5F39\u3002
 block.disintegration-regeneration.name=\u590D\u82CF
 block.disintegration-regeneration.description=\u53D1\u5C04\u5927\u578B\u7206\u70B8\u80FD\u91CF\u70AE\u5F39\u3002
+block.disintegration-holy.name=\u5723\u5149
+block.disintegration-holy.description=\u53D1\u5C04\u5927\u578B\u6301\u7EED\u6027\u6FC0\u5149\u3002
 block.disintegration-finspray.name=\u626C\u5C18
 block.disintegration-finspray.description=\u5411\u654C\u4EBA\u53D1\u5C04\u7269\u8D28\u7C89\u5C18\u3002
 block.disintegration-ambush.name=\u4F0F\u51FB
@@ -225,6 +235,8 @@ block.disintegration-payload-decelerator.name=\u8F7D\u8377\u51CF\u901F\u5668
 block.disintegration-payload-decelerator.description=\u51CF\u901F\u8F7D\u8377\u3002
 block.disintegration-payload-redirector.name=\u8F7D\u8377\u8F6C\u5411\u5668
 block.disintegration-payload-redirector.description=\u5E2E\u52A9\u8F7D\u8377\u8F6C\u5411\u3002
+block.disintegration-payload-cross.name=\u8F7D\u8377\u8F68\u9053\u4EA4\u53C9\u8DEF\u53E3
+block.disintegration-payload-cross.description=\u4E24\u6761\u4EA4\u53C9\u8F7D\u8377\u8F68\u9053\u7684\u6865\u6881\u3002
 block.disintegration-payload-fork-left.name=\u5DE6\u5411\u8F7D\u8377\u8F68\u9053\u5206\u53C9
 block.disintegration-payload-fork-left.description=\u5C06\u8F93\u5165\u7684\u8F7D\u8377\u54112\u4E2A\u65B9\u5411\u8F6E\u6D41\u8F93\u51FA\u3002
 block.disintegration-payload-fork-right.name=\u53F3\u5411\u8F7D\u8377\u8F68\u9053\u5206\u53C9
@@ -288,18 +300,46 @@ unit.disintegration-spear.name=\u957F\u77DB
 unit.disintegration-spear.description=\u4EA7\u751F\u80FD\u91CF\u573A\uFF0C\u4F7F\u8303\u56F4\u5185\u7684\u654C\u65B9\u5EFA\u7B51\u4E0E\u5355\u4F4D\u53D7\u5230\u7535\u51FB\uFF0C\u5BF9\u5DF1\u65B9\u5219\u8FDB\u884C\u4FEE\u590D\u3002 \u53EF\u4EE5\u8DC3\u8FC1\u3002
 unit.disintegration-epee.name=\u91CD\u9524
 unit.disintegration-epee.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u5A01\u529B\u5F3A\u5927\u7684\u8FDC\u7A0B\u5BFC\u5F39\u4E0E\u8FD1\u7A0B\u5BFC\u5F39\u3002
-unit.disintegration-knife.name=\u5229\u5203
-unit.disintegration-knife.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u52A8\u6FC0\u5149\u653B\u51FB\u3002
+unit.disintegration-colibri.name=\u8702\u9E1F
+unit.disintegration-colibri.description=\u7A7F\u900F\u9644\u8FD1\u7684\u654C\u4EBA\u3002
+unit.disintegration-albatross.name=\u5929\u7FC1
+unit.disintegration-albatross.description=\u51B2\u5411\u654C\u4EBA\u5E76\u81EA\u6BC1\uFF0C\u9020\u6210\u5927\u8303\u56F4\u5C04\u7EBF\u7206\u70B8\u3002
+unit.disintegration-crane.name=\u4ED9\u9E64
+unit.disintegration-crane.description=\u5411\u6B63\u4E0B\u65B9\u7684\u5730\u9762\u654C\u4EBA\u6295\u63B7\u70B8\u5F39\u3002
+unit.disintegration-eagle.name=\u96C4\u9E70
+unit.disintegration-eagle.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u7A7F\u7532\u5F39\u3002
+unit.disintegration-phoenix.name=\u5927\u9E4F
+unit.disintegration-phoenix.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u5A01\u529B\u5F3A\u5927\u7684\u6FC0\u5149\u3002
+unit.disintegration-converge.name=\u6C47\u805A
+unit.disintegration-converge.description=\u81EA\u52A8\u5F00\u91C7\u94C1\u548C\u94C5\uFF0C\u5E76\u5C06\u5176\u653E\u5165\u6838\u5FC3\u4E2D\u3002
+unit.disintegration-cover.name=\u8986\u76D6
+unit.disintegration-cover.description=\u5411\u654C\u4EBA\u53D1\u5C04\u5149\u675F\u3002
+unit.disintegration-protect.name=\u4FDD\u62A4
+unit.disintegration-protect.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u5149\u675F\u3002
+unit.disintegration-defend.name=\u9632\u5FA1
+unit.disintegration-defend.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u7B49\u79BB\u5B50\u70AE\u5F39\u3002
+unit.disintegration-harbour.name=\u6E2F\u6E7E
+unit.disintegration-harbour.description=\u4EA7\u751F\u80FD\u91CF\u573A\uFF0C\u4F7F\u8303\u56F4\u5185\u7684\u654C\u65B9\u5EFA\u7B51\u4E0E\u5355\u4F4D\u53D7\u5230\u7535\u51FB\uFF0C\u5BF9\u5DF1\u65B9\u5219\u8FDB\u884C\u4FEE\u590D\u3002
+unit.disintegration-assist.name=\u652F\u63F4
+unit.disintegration-assist.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u70AE\u5F39\u653B\u51FB\u3002
+unit.disintegration-strike.name=\u7A81\u88AD
+unit.disintegration-strike.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u6FC0\u5149\u3002
+unit.disintegration-coverture.name=\u63A9\u62A4
+unit.disintegration-coverture.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u7206\u70B8\u70AE\u5F39\u3002
+unit.disintegration-attack.name=\u653B\u51FB
+unit.disintegration-attack.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u5BFC\u5F39\u3002
+unit.disintegration-devastate.name=\u6BC1\u706D
+unit.disintegration-devastate.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u5927\u578B\u6FC0\u5149\u3002
 unit.disintegration-verity.name=\u771F\u7406
 unit.disintegration-verity.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u79BB\u5B50\u7403\u3002
 unit.disintegration-truth.name=\u5B9E\u6027
-unit.disintegration-truth.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u4F8B\u5B50\u5149\u675F\u3002
+unit.disintegration-truth.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u79BB\u5B50\u5149\u675F\u3002
 unit.disintegration-solve.name=\u7834\u89E3
 unit.disintegration-solve.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u7B49\u79BB\u5B50\u706B\u7130\u3002
 unit.disintegration-essence.name=\u672C\u8D28
 unit.disintegration-essence.description=\u5411\u9644\u8FD1\u7684\u654C\u4EBA\u53D1\u5C04\u7A7F\u7532\u5F39\u3002
-unit.disintegration-celestial.name=\u5929\u795E
-unit.disintegration-celestial.description=\u5411\u524D\u65B9\u9525\u5F62\u533A\u57DF\u53D1\u5C04\u5B50\u5F39\u3002
+unit.disintegration-axiom.name=\u516C\u7406
+unit.disintegration-axiom.description=\u5411\u524D\u65B9\u9525\u5F62\u533A\u57DF\u53D1\u5C04\u5B50\u5F39\u3002
 unit.disintegration-separate.name=\u5206\u79BB
 unit.disintegration-separate.description=\u4FDD\u62A4\u57FA\u5EA7\u6838\u5FC3\uFF0C\u53EF\u5EFA\u9020\u5EFA\u7B51\u3002 \u4F7F\u7528\u6FC0\u5149\u5F39\u4FEE\u590D\u5EFA\u7B51\u3002
 unit.disintegration-attract.name=\u5438\u5F15
@@ -317,7 +357,7 @@ planet.disintegration-terminsi.name=\u5FD2\u51A5\u5E0C
 planet.disintegration-cosiuaz.name=\u5361\u897F\u4E4C\u5179
 planet.disintegration-caelpse.name=\u5361\u5C14\u666E\u65AF
 sector.disintegration-launching-area.name=\u7740\u9646\u533A
-sector.disintegration-launching-area.description=\u8FD9\u662F\u7B2C\u4E09\u4E2A\u533A\u5757\u7684\u5F00\u59CB,\u5728\u8FD9\u91CC\u5F00\u91C7\u4E00\u4E9B\u94C1\u3002
+sector.disintegration-launching-area.description=\u8FD9\u662F\u7B2C\u4E09\u4E2A\u661F\u7403\u7684\u5F00\u59CB,\u5728\u8FD9\u91CC\u5F00\u91C7\u4E00\u4E9B\u94C1\u548C\u94C5\u3002
 sector.disintegration-planetary-monitoring-center.name=\u884C\u661F\u76D1\u6D4B\u4E2D\u5FC3
 sector.disintegration-planetary-monitoring-center.description=\u654C\u4EBA\u5728\u8FD9\u91CC\u76D1\u6D4B\u6240\u6709\u8F68\u9053\u661F\u4F53\u4E0A\u7684\u4E00\u4E3E\u4E00\u52A8,\u6467\u6BC1\u670D\u52A1\u5668\u548C\u654C\u4EBA\u6838\u5FC3\u3002
 stat.shardchance=\u6FC0\u53D1\u788E\u7247\u6982\u7387
@@ -325,4 +365,5 @@ stat.sharddamage=\u6FC0\u53D1\u788E\u7247\u4F24\u5BB3
 bar.laser=\u6FC0\u5149
 bar.laseramount=\u6FC0\u5149\uFF1A{0}
 bar.laserpercent=\u6FC0\u5149\uFF1A{0} ({1}%)
+bar.lightpercent=\u5149\uFF1A{0} ({1}%)
 unit.laserunits=\u5355\u4F4D\u6FC0\u5149
